# vibeshub

./: .gitignore  README.md
plugins/claude-code/: README.md  conftest.py  platform_adapter.py  pyproject.toml  reader.py
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/.codex-plugin/: plugin.json
plugins/claude-code/commands/: share-pr.md  share-pr.py  share-trace.md  share-trace.py
plugins/claude-code/hooks/: hooks.json  on-pr-create.py  on-pr-share.py
plugins/claude-code/tests/: test_bundle.py  test_codex_reader.py  test_codex_subagent_link.py  test_hook_e2e.py  test_parse_pr_url.py  test_pipeline.py  test_post_comment.py  test_pr_resolve.py  test_reader.py  test_redact.py  test_share_pr.py  test_share_trace.py  test_subagent_link.py  test_transcript_reader.py  test_upload.py
plugins/claude-code/vibeshub_client/: bundle.py  codex_subagent_link.py  pipeline.py  post_comment.py  subagent_link.py  upload.py  version.py
plugins/shared/: pyproject.toml
plugins/shared/tests/: conftest.py  test_pipeline.py  test_post_comment.py  test_preview.py  test_upload.py
plugins/shared/vibeshub_client/: pipeline.py  post_comment.py  preview.py
webapp/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
webapp/backend/alembic/: env.py
webapp/backend/alembic/versions/: 380015a6acca_users_and_sessions.py  3a1f9c2b5e07_traces_repo_pr_nullable.py  7f3c1a9b2d4e_add_is_private_to_traces.py  9e191b25d172_initial_traces_and_renders.py  a7e2c4f81b39_rename_bhavya6187_vibeshub_to_vibeshub_.py  b319190103de_renders_composite_pk_trace_id_renderer_.py  b8d3f1a02c4e_add_source_format_to_traces.py  c1a2b3d4e5f6_add_title_to_traces.py  c4a0e8d51f47_drop_renders_table.py  d2e4f6a8c0b1_traces_owner_nullable_claim_token.py  def14788849e_add_agents_to_traces.py  e1f8a2b9c073_add_digest_columns_and_agent_run.py  f4b2d6e8a1c3_add_search_documents.py
webapp/backend/app/: check_db.py  codex_convert.py  convert.py  cursor_convert.py  deps.py  main.py  message_count.py  ratelimit.py  settings.py  short_id.py  smoke_check.py
webapp/backend/app/agents/: _client.py  _usage.py
webapp/backend/app/api/: ask.py  auth.py  github_picker.py  github_stats.py  ingest.py  og.py  pr_url.py  render.py  schemas.py  seo.py  spa_seo.py  trace_service.py  traces.py  uploads.py
webapp/backend/app/auth/: __init__.py  crypto.py  github.py  oauth.py  scopes.py  sessions.py
webapp/backend/app/github/: public_client.py  repo_access.py
webapp/backend/app/og/: cache.py  card.py  render.py
webapp/backend/app/redact/: __init__.py  bundle.py  patterns.py
webapp/backend/app/render/: __init__.py  claude_code_log.py
webapp/backend/frontend_dist/: index.html
webapp/backend/scripts/: backfill_redigest.py  backfill_search_documents.py  migrate_to_v2_storage.py  recount_messages.py
webapp/backend/tests/: _auth_helpers.py  conftest.py  test_auth_crypto.py  test_auth_github.py  test_auth_logout.py  test_auth_me.py  test_auth_oauth.py  test_auth_scopes.py  test_auth_sessions.py  test_azure_blob_store.py  test_bundle_loose.py  test_bundle_unpack.py  test_codex_convert.py  test_convert.py  test_cursor_convert.py  test_deps.py  test_e2e.py  test_github_picker.py  test_github_stats_endpoints.py  test_health.py  test_ingest.py  test_message_count.py  test_migrate_to_v2_storage.py  test_migration_repo_pr_nullable.py  test_models.py  test_og_card.py  test_og_render.py  test_og_route.py  test_pr_url.py  test_private_traces.py  test_public_github_client.py  test_ratelimit.py  test_recount_messages.py  test_redact.py  test_render.py  test_repo_access.py  test_seo.py  test_serve_session.py  test_settings.py  test_short_id.py  (+10 more)
(+384 files in other folders)
