[project]
name = "vibeshub-claude-code-plugin"
version = "0.1.0"
description = "Claude Code plugin glue for vibeshub"
requires-python = ">=3.12,<3.14"
dependencies = [
    "vibeshub-client",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
