[project]
name = "vibeshub-claude-code-plugin"
version = "0.1.1"
description = "Claude Code plugin glue for vibeshub"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["vibeshub_client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
