[project]
name = "vibeshub-client"
version = "0.1.0"
description = "Platform-agnostic vibeshub upload client"
requires-python = ">=3.12,<3.14"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["vibeshub_client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
