[project]
name = "vibeshub-backend"
version = "0.3.1"
description = "vibeshub web app backend"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "cryptography>=43",
    "openai>=1.50",
    # Required at FastAPI import time for the Form/File parameters on
    # POST /api/uploads — without it, the whole app crashes on boot.
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "aiosqlite>=0.20",
    "azure-storage-blob>=12.19",
    "azure-identity>=1.15",
]
azure = [
    "azure-storage-blob>=12.19",
    "azure-identity>=1.15",
    "aiohttp>=3.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
